--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form validation in HTML & CSS | CodingNepal</title>
+  <title>Login Form</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
@@ -28,10 +28,10 @@
         </div>
         <div class="error error-txt">Password can't be blank</div>
       </div>
-      <div class="pass-txt"><a href="#">Forgot password?</a></div>
+      <div class="pass-txt"><a href="mailto:owendeepe@outlook.com?subject=forgot password">Forgot password?</a></div>
       <input type="submit" value="Login">
     </form>
-    <div class="sign-txt">Not yet member? <a href="#">Signup now</a></div>
+    <div class="sign-txt">Not yet member? <a href="mailto:owendeepe@outlook.com?subject=sign me up!">Signup now</a></div>
   </div>
 
   <script src="script.js"></script>
